force-app/main/default/objects/Expense__c/fields/AmountNetto19__c.field-meta.xml
<CustomField>
    <fullName>AmountNetto19__c</fullName>
    <label>Amount Netto 19%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>