force-app/main/default/objects/Expense__c/fields/AmountNetto7__c.field-meta.xml
<CustomField>
    <fullName>AmountNetto7__c</fullName>
    <label>Amount Netto 7%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>