force-app/main/default/objects/Expense__c/fields/AmountNetto__c.field-meta.xml
<CustomField>
    <fullName>AmountNetto__c</fullName>
    <formula>IF(ISPICKVAL(SubCategory__c, &quot;Bewirtungsaufwendungen&quot;),0.7*(AmountNetto19__c+AmountNetto7__c), AmountNetto19__c+AmountNetto7__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Netto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>