force-app/main/default/objects/Expense__c/fields/AmountTotal__c.field-meta.xml
<CustomField>
    <fullName>AmountTotal__c</fullName>
    <formula>IF(Not(NoVat__c),1.19*AmountNetto19__c+1.07*AmountNetto7__c, AmountNetto19__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>