force-app/main/default/objects/Expense__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&apos;EUR&apos;</defaultValue>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>