force-app/main/default/objects/Expense__c/fields/NoVat__c.field-meta.xml
<CustomField>
    <fullName>NoVat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Vat</label>
    <type>Checkbox</type>
</CustomField>