force-app/main/default/objects/Expense__c/fields/ReverseCharge__c.field-meta.xml
<CustomField>
    <fullName>ReverseCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverse Charge</label>
    <type>Checkbox</type>
</CustomField>