force-app/main/default/objects/Expense__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waren, Rohstoffe und Hilfsstoffe einschließlich der Nebenkosten</fullName>
            </value>
            <value>
                <fullName>Bezogene Fremdleistungen</fullName>
            </value>
            <value>
                <fullName>Ausgaben für eigenes Personal</fullName>
            </value>
            <value>
                <fullName>Aufwendungen für Telekommunikation</fullName>
            </value>
            <value>
                <fullName>Übernachtungs- und Reisenebenkosten bei Geschäftsreisen des Steuerpflichtigen</fullName>
            </value>
            <value>
                <fullName>Fortbildungskosten</fullName>
            </value>
            <value>
                <fullName>Kosten für Beratungsleistungen und Buchführung</fullName>
            </value>
            <value>
                <fullName>Miete / Leasing für bewegliche Wirtschaftsgüter (ohne Kraftfahrzeuge)</fullName>
            </value>
            <value>
                <fullName>Beiträge, Gebühren, Abgaben und Versicherungen</fullName>
            </value>
            <value>
                <fullName>Werbekosten</fullName>
            </value>
            <value>
                <fullName>Schuldzinsen</fullName>
            </value>
            <value>
                <fullName>Gezahlte Vorsteuerbeträge</fullName>
            </value>
            <value>
                <fullName>An das Finanzamt gezahlte und ggf. verrechnete Umsatzsteuer</fullName>
            </value>
            <value>
                <fullName>Bildung von Rücklagen</fullName>
            </value>
            <value>
                <fullName>Übrige unbeschränkt abziehbare Betriebsausgaben</fullName>
            </value>
            <value>
                <fullName>Bewirtungsaufwendungen</fullName>
            </value>
            <value>
                <fullName>Geschenke</fullName>
            </value>
            <value>
                <fullName>Leasingkosten, Steuern, Versicherungen und Maut</fullName>
            </value>
            <value>
                <fullName>Sonstige tatsächliche Fahrkosten</fullName>
            </value>
            <value>
                <fullName>Fahrtkoste für gewerblich genutzte Privatfahrzeuge</fullName>
            </value>
            <value>
                <fullName>Wege zwischen Wohnung und erster Betriebsstätte und Familienheimfahrten</fullName>
            </value>
            <value>
                <fullName>GWG</fullName>
            </value>
            <value>
                <fullName>Verpflegungsmehraufwendungen</fullName>
            </value>
            <value>
                <fullName>Bürobedarf</fullName>
            </value>
            <value>
                <fullName>Spenden</fullName>
            </value>
            <value>
                <fullName>Kinderbetreuung</fullName>
            </value>
            <value>
                <fullName>Krankenkasse</fullName>
            </value>
            <value>
                <fullName>Rente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>