force-app/main/default/objects/Expense__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Betriebsausgaben</fullName>
            </value>
            <value>
                <fullName>Raumkosten und sonstige Grundstücksaufwendungen</fullName>
            </value>
            <value>
                <fullName>Sonstige unbeschränkt abziehbare Betriebsausgaben</fullName>
            </value>
            <value>
                <fullName>Beschränkt abziehbare Betriebsausgaben und Gewerbesteuer</fullName>
            </value>
            <value>
                <fullName>Kraftfahrzeugkosten und andere Fahrtkosten</fullName>
            </value>
            <value>
                <fullName>Absetzung für Abnutzung (AfA)</fullName>
            </value>
            <value>
                <fullName>Privatentnahme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>