force-app/main/default/objects/Expense__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>IF(Not(NoVat__c), 0.19*AmountNetto19__c+0.07*AmountNetto7__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>