force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AmountTotal__c</columns>
    <columns>DateIncurred__c</columns>
    <columns>VAT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>