force-app/main/default/objects/Expense__c/listViews/CurrentMonth.listView-meta.xml
<ListView>
    <fullName>CurrentMonth</fullName>
    <columns>NAME</columns>
    <columns>AmountNetto19__c</columns>
    <columns>AmountTotal__c</columns>
    <columns>VAT__c</columns>
    <columns>Type__c</columns>
    <columns>SubCategory__c</columns>
    <columns>DateIncurred__c</columns>
    <columns>CompanyName__c</columns>
    <columns>NoVat__c</columns>
    <columns>ReverseCharge__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DateIncurred__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Current Month</label>
</ListView>